# clicker_cpp

./: Background.cpp  CMakeLists.txt  ClickableSprite.cpp  Game.cpp  Score.cpp  Upgradebutton.cpp  main.cpp
headers/: Background.h  ClickableSprite.h  Game.h  Score.h  Upgradebutton.h  Winsize.h
